# alpr

./: README.md  train.py  utils.py
SocketClientALPR/: SocketClientALPR.sln
SocketClientALPR/SocketClientALPR/: App.xaml  App.xaml.cs  AuthForms.xaml  AuthForms.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SocketClientALPR.csproj
SocketClientALPR/SocketClientALPR/Classes/: DBConnect.cs  Models.cs
SocketClientALPR/SocketClientALPR/Properties/: Resources.Designer.cs  Resources.resx
SocketClientALPR/SocketClientALPR/Resources/: Инструкционная карта.docx
client/: Cargo.toml
client/src/: main.rs
db/: init.sql
server/: .env.development  server.py
server/db/data/: mastlog.ldf  model_msdblog.ldf  model_replicatedmaster.ldf  msdblog.ldf
server/db/log/: HkEngineEventFile_0_133524007774800000.xel  HkEngineEventFile_0_133524657524760000.xel  HkEngineEventFile_0_133524820178480000.xel  HkEngineEventFile_0_133535014432240000.xel  HkEngineEventFile_0_133535039991320000.xel  HkEngineEventFile_0_133535048404670000.xel  HkEngineEventFile_0_133535095779370000.xel  HkEngineEventFile_0_133535948811280000.xel  errorlog  errorlog.1  errorlog.2  errorlog.3  errorlog.4  errorlog.5  errorlog.6  log_3.trc  log_4.trc  log_5.trc  log_6.trc  log_7.trc  system_health_0_133524007916600000.xel  system_health_0_133524657561760000.xel  system_health_0_133524820220280000.xel  system_health_0_133535014474250000.xel  system_health_0_133535040052700000.xel  system_health_0_133535048445580000.xel  system_health_0_133535095822770000.xel  system_health_0_133535948853170000.xel
(+1 files in other folders)
